folder-structure - add prettier add jest remove karma remove jasmine

--- a/src/app/components/file/file.component.html
+++ b/src/app/components/file/file.component.html
@@ -1,6 +1,4 @@
-<div
-  class="file"
->
+<div class="file">
   <div class="file-image">
     <img src="../../../assets/images/file-regular.svg" alt="File icon" />
   </div>
