--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
 
 <app-root-folder></app-root-folder>
 
-<app-json-representation [treeData]="treeData$ | async"></app-json-representation>
-
+<app-json-representation
+  [treeData]="treeData$ | async"
+></app-json-representation>
