--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
-<div class="header">
+<header class="header">
   <div class="header-logo">
     <img
       src="../../../assets/images/Mable-2020-Logo-RGB.png"
-      alt="Folder icon icon"
+      alt="Folder icon"
     />
   </div>
-</div>
+</header>
